--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3'
 services:
-    mongo_xenial:
+    mongo:
         image: mongo:4.1.7-xenial
         restart: always
-        command: --sslPEMKeyFile ./mongo/etc/ssl/mongo.pem
         volumes:
             - ./mongo/etc/ssl:/etc/ssl
             - ./mongo/db:/data/db
@@ -14,24 +13,23 @@ services:
             - MONGO_INITDB_ROOT_PASSWORD=mdbpass
             - MONGO_INITDB_DATABASE=graphql_demo
         networks:
-            - graphql_network
+            - graphqlnet
 
-    mongo_express:
-        image: mongo-express
+    mongoexpress:
+        image: mongo-express:0.49.0
         restart: always
         ports:
             - 8081:8081
         environment:
             - ME_CONFIG_OPTIONS_EDITORTHEME=ambiance
-            - ME_CONFIG_BASICAUTH_USERNAME=mdbroot
-            - ME_CONFIG_BASICAUTH_PASSWORD=mdbpass
-            - ME_CONFIG_MONGODB_SERVER=mongo_xenial
+            - ME_CONFIG_MONGODB_ADMINUSERNAME=mdbroot
+            - ME_CONFIG_MONGODB_ADMIN_PASSWORD=mdbpass
         depends_on:
-            - mongo_xenial
+            - mongo
         links:
-            - mongo_xenial
+            - mongo
         networks:
-            - graphql_network
+            - graphqlnet
 
     nodejs:
         build: ./nodejs
@@ -43,15 +41,15 @@ services:
         ports:
             - 8080:8080
         depends_on:
-            - mongo_xenial
+            - mongo
         networks:
-            - graphql_network
+            - graphqlnet
 
 volumes:
     node_modules:
 
 networks:
-    graphql_network:
+    graphqlnet:
         driver: bridge
         driver_opts:
             com.docker.network.enable_ipv6: "false"
