--- a/node/client/package.json
+++ b/node/client/package.json
@@ -1,22 +1,25 @@
 {
-    "name": "GraphQL-Client-Demo",
-    "description": "GraphQL Server Demo",
+    "name": "client",
     "version": "0.1.0",
-    "author": "Vishal Raj <vishalraj82@gmail.com>",
-    "license": "ISC",
-    "main": "src/app.js",
-    "scripts": {
-        "dev": "nodemon src/app.js",
-        "debug": "nodemon src/app.js"
-    },
+    "private": true,
     "dependencies": {
-        "express": "^4.16.4",
-        "graphql": "^14.1.1",
-        "apollo-boost": "^0.1.27",
-        "react-aoollo": "^2.4.1"
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0",
+        "react-scripts": "2.1.3"
     },
-    "devDependencies": {
-        "nodemon": "^1.18.9"
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
-    "repository": "https://github.com/vishalraj82/GraphQLDemo"
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
