--- a/node/client/Dockerfile
+++ b/node/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:8.15.0-alpine
 
 WORKDIR /usr/src/app
 
-COPY package*.json /usr/src/app/
+COPY package.json /usr/src/app/
 
 RUN npm install --quiet --prefix /usr/src/app/
 
