--- a/node/client/package.json
+++ b/node/client/package.json
@@ -1,11 +1,17 @@
 {
-    "name": "client",
+    "name": "GraphQL-Server-Demo",
+    "description": "GraphQL Server Demo",
     "version": "0.1.0",
+    "author": "Vishal Raj <vishalraj82@gmail.com>",
+    "license": "ISC",
     "private": true,
     "dependencies": {
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
-        "react-scripts": "2.1.3"
+        "react-scripts": "2.1.3",
+        "apollo-boost": "^0.1.27",
+        "react-apollo": "^2.4.1",
+        "graphql": "^14.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
