--- a/node/server/package.json
+++ b/node/server/package.json
@@ -4,7 +4,7 @@
     "version": "0.1.0",
     "author": "Vishal Raj <vishalraj82@gmail.com>",
     "license": "ISC",
-    "main": "src/app.js",
+    "private": true,
     "scripts": {
         "dev": "nodemon src/app.js",
         "debug": "nodemon src/app.js"
@@ -13,7 +13,8 @@
         "express": "^4.16.4",
         "graphql": "^14.1.1",
         "express-graphql": "^0.7.1",
-        "mongoose": "^5.4.6"
+        "mongoose": "^5.4.6",
+        "cors": "^2.8.5"
     },
     "devDependencies": {
         "nodemon": "^1.18.9"
