--- a/graphql/client/package.json
+++ b/graphql/client/package.json
@@ -11,7 +11,8 @@
         "react-scripts": "2.1.3",
         "apollo-boost": "^0.1.27",
         "react-apollo": "^2.4.1",
-        "graphql": "^14.1.1"
+        "graphql": "^14.1.1",
+        "react-router-dom": "^4.3.1"
     },
     "scripts": {
         "start": "react-scripts start",
