--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,17 @@
 version: '3'
 services:
-    mongo:
+    mongoDB:
         image: mongo:4.1.7-xenial
         restart: always
         volumes:
             - ./mongo/db:/data/db
-        ports:
-            - 27017:27017
         environment:
             - MONGO_INITDB_ROOT_USERNAME=mdbroot
             - MONGO_INITDB_ROOT_PASSWORD=mdbpass
             - MONGO_INITDB_DATABASE=graphql_demo
         networks:
-            - graphqlnet
-
-    mongo-express:
+            - graphqlnetprivate
+    mongoExpress:
         image: mongo-express:0.49.0
         restart: always
         ports:
@@ -24,13 +21,11 @@ services:
             - ME_CONFIG_MONGODB_ADMINUSERNAME=mdbroot
             - ME_CONFIG_MONGODB_ADMINPASSWORD=mdbpass
         depends_on:
-            - mongo
-        links:
-            - mongo
+            - mongoDB
         networks:
-            - graphqlnet
-
-    graphql-server:
+            - graphqlnetpublic
+            - graphqlnetprivate
+    graphqlServer:
         build:
             context: ./graphql/server
             args:
@@ -41,14 +36,11 @@ services:
         volumes:
             - ./graphql/server:${SERVER_INSTALL_DIR}
             - server_node_modules:${SERVER_INSTALL_DIR}/node_modules # https://stackoverflow.com/questions/30043872/docker-compose-node-modules-not-present-in-a-volume-after-npm-install-succeeds
-        ports:
-            - 4000:4000
         depends_on:
-            - mongo
+            - mongoDB
         networks:
-            - graphqlnet
-
-    graphql-client:
+            - graphqlnetprivate
+    graphqlClient:
         build:
             context: ./graphql/client
             args:
@@ -61,15 +53,19 @@ services:
             - client_node_modules:${CLIENT_INSTALL_DIR}/node_modules # https://stackoverflow.com/questions/30043872/docker-compose-node-modules-not-present-in-a-volume-after-npm-install-succeeds
         ports:
             - 4100:3000
+        depends_on:
+            - graphqlServer
         networks:
-            - graphqlnet
+            - graphqlnetpublic
+            - graphqlnetprivate
 
 volumes:
     server_node_modules:
     client_node_modules:
 
 networks:
-    graphqlnet:
+    graphqlnetpublic:
+    graphqlnetprivate:
         driver: bridge
         driver_opts:
             com.docker.network.enable_ipv6: "false"
