--- a/graphql/client/Dockerfile
+++ b/graphql/client/Dockerfile
@@ -1,13 +1,9 @@
-FROM node:8.15.0-alpine
+FROM node:12.18.4-alpine3.12
 
 ARG INSTALL_DIR
 
-RUN mkdir -p $INSTALL_DIR
-
 WORKDIR $INSTALL_DIR
 
-COPY package.json $INSTALL_DIR/
-
-RUN npm install --quiet --prefix $INSTALL_DIR
-
 COPY . $INSTALL_DIR
+
+RUN npm install --quiet
